--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Specifies files to intentionally ignore when using Git
+# http://git-scm.com/docs/gitignore
+
+hooks
+www/build/
+platforms/
+plugins/
+*.swp
+typings
