--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "cordova-plugin-whitelist@~1.2.2",
     "cordova-plugin-splashscreen@~3.2.2",
     "cordova-plugin-statusbar@~2.1.3",
-    "ionic-plugin-keyboard@~2.2.1"
+    "ionic-plugin-keyboard@~2.2.1",
+    "cordova-plugin-code-push@latest"
   ],
   "cordovaPlatforms": [
     "ios",
