--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "es6-shim": "0.35.1",
     "ionic-angular": "2.0.0-beta.11",
+    "ionic-native": "~1.3.16",
     "ionicons": "3.0.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.6",
@@ -43,8 +44,7 @@
     "cordova-plugin-code-push@latest"
   ],
   "cordovaPlatforms": [
-    "ios",
-    {
+    "ios", {
       "platform": "ios",
       "version": "",
       "locator": "ios"
