--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "es6-shim": "0.35.1",
     "ionic-angular": "2.0.0-beta.11",
     "ionic-native": "~1.3.16",
+    "ionic2-code-push": "^0.2.0",
     "ionicons": "3.0.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.6",
@@ -44,7 +45,8 @@
     "cordova-plugin-code-push@latest"
   ],
   "cordovaPlatforms": [
-    "ios", {
+    "ios",
+    {
       "platform": "ios",
       "version": "",
       "locator": "ios"
